images for jumbotron

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,4 +5,13 @@ body {
 }
 .jumbotron {
 	text-align: center;
+	/* add bootstrap jumbotron image */
+	background: url("../images/Horses_Running_Free_1434767.jpg");
+	/*background-size: cover;*/
+	background-repeat: repeat;
+	background-position: center;
+	/* more adjustments to bootstrap */
+	color: yellow;
+	background-color: #FFCC66;
+	margin-bottom: 5px;
 }
