--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,21 @@ html {
   position: relative;
   min-height: 100%
 }
-header {
+#logo {
+	width: 175px;
+	height: 70px;
+	background-color: #4aaaa5;
+	float: left;
+	color: black;
+	text-align: center;
+
+}
+nav {
 	background-color: #ffcc00;
 	text-align: right;
 	width: 100%;
 	height: 50px;
+
 
 }
 body {
@@ -31,8 +41,10 @@ h1 {
 	background-position: center;
 	/* more adjustments to bootstrap */
 	margin-bottom: 5px;
+	margin-top: 15px;
+	border: 5px solid black;
 }
-.footer {
+footer {
 	background: #ffcc00;
 	color: black;
 	padding: 25px;
