--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,6 +44,9 @@ h1 {
 	margin-top: 15px;
 	border: 5px solid black;
 }
+h2 {
+	margin-top: 10px;
+}
 footer {
 	background: #ffcc00;
 	color: black;
