--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,9 +5,10 @@ html {
 #logo {
 	width: 175px;
 	height: 70px;
-	background-color: #4aaaa5;
+	background-color: #00e600;
 	float: left;
 	color: black;
+	font-weight: bold;
 	text-align: center;
 	padding-top: 20px;
 }
@@ -15,6 +16,8 @@ html {
 nav {
 	background-color: #ffcc00;
 	text-align: right;
+	font-size: 14px;
+	color: black;
 	width: 100%;
 	height: 50px;
 
@@ -23,6 +26,7 @@ nav {
 body {
 	width: 100%;
 	font-family: 'Libre Franklin', sans-serif;
+	font-size: 18px;
 	
 }
 
@@ -33,7 +37,7 @@ h1 {
 	position: relative;
 	font-family: 'Poller One', cursive, serif;
 	text-align: center;
-	color: #ffcc00;
+	color: #00e600;
 	background-color: #FFCC66;
 	/* add bootstrap jumbotron image */
 	background: url("../images/Horses_Running_Free_1434767.jpg");
@@ -47,12 +51,26 @@ h1 {
 }
 h2 {
 	margin-top: 10px;
+	font-weight: bold;
+}
+h3 {
+	font-weight: bold;
+}
+.table {
+	font-size: 12px;
+}
+th {
+	text-transform: uppercase;
+	text-align: center;
+	font-weight: bold;
+	font-size: 90%;
+
 }
 footer {
 	background: #ffcc00;
 	color: black;
 	padding: 25px;
-	border-top: 8px solid #4aaaa5;
+	border-top: 8px solid #00e600;
 	font-size: 12px;
 	text-align: center;
 }
