--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* for all pages */
 html {
   position: relative;
   min-height: 100%
@@ -20,14 +21,13 @@ nav {
 	color: black;
 	width: 100%;
 	height: 50px;
-
+	padding-top: 15px;
 
 }
 body {
 	width: 100%;
 	font-family: 'Libre Franklin', sans-serif;
-	font-size: 18px;
-	
+	font-size: 18px;	
 }
 
 h1 {
@@ -66,6 +66,8 @@ th {
 	font-size: 90%;
 
 }
+
+/* footer style */
 footer {
 	background: #ffcc00;
 	color: black;
@@ -73,4 +75,54 @@ footer {
 	border-top: 8px solid #00e600;
 	font-size: 12px;
 	text-align: center;
+}
+
+/* contact form styling */
+#contact-form {
+	float: left;
+	width: 75%;
+}
+#contact-form ul {
+	margin-bottom: 20px;
+}
+#contact-form li {
+	margin-bottom: 10px;
+}
+label,
+input[type=text],
+input[type=email],
+textarea {
+	display: block;
+	width: 60%;
+}
+input[type=text],
+input[type=email],
+textarea {
+	height: 35px;
+	border: 1px solid #00e600;
+	padding: 0 10px;
+	font-size: 14px;
+}
+textarea {
+	height: 200px;
+}
+input[type=submit] {
+	background: #00e600;
+	border: 0 none;
+	color: black;
+	font-size: 18px;
+	padding: 10px 30px;
+	cursor: pointer;
+}
+input[type=text]:focus, input[type=email]:focus, input[type=message]:focus {
+    background-color: lightblue;
+} 
+.ponyexpress {
+	margin: 0px;
+	float: right;
+	width: 18%;
+	padding-right: 20px;
+}
+.clearfix {
+	clear: both;
 }
