--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -69,18 +69,19 @@ th {
 
 /* footer style */
 footer {
+	width: 100%;
 	background: #ffcc00;
 	color: black;
 	padding: 25px;
 	border-top: 8px solid #00e600;
-	font-size: 12px;
+	font-size: 14px;
 	text-align: center;
 }
 
 /* contact form styling */
 #contact-form {
 	float: left;
-	width: 75%;
+	width: 70%;
 }
 #contact-form ul {
 	margin-bottom: 20px;
@@ -93,7 +94,7 @@ input[type=text],
 input[type=email],
 textarea {
 	display: block;
-	width: 60%;
+	width: 55%;
 }
 input[type=text],
 input[type=email],
@@ -118,10 +119,10 @@ input[type=text]:focus, input[type=email]:focus, input[type=message]:focus {
     background-color: lightblue;
 } 
 .ponyexpress {
-	margin: 0px;
+	margin-right: 10px;
 	float: right;
-	width: 18%;
-	padding-right: 20px;
+	/* width: 18%; */
+	padding-right: 10px;
 }
 .clearfix {
 	clear: both;
